@@ -8,6 +8,8 @@
       GameFAQs)
     * Quick editing! Edit your posts on the message list without leaving the
       page
+    * Show user profiles in a box after hovering over username links
+      (QuickWhois)
 
 2011-10-31:
     * version 0.8.3
